--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
@@ -11,22 +11,9 @@
         >
         <ListView
                 android:id="@+id/main_ListView"
+                android:layout_above="@+id/main_GridView"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-        />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/main_LinearLayoutForSearch"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:layout_above="@id/main_GridView"
-        >
-        <EditText
-                android:id="@+id/main_SearchText"
-                android:layout_height="wrap_content"
-                android:layout_width="fill_parent"
-                android:text="Entry the name or phone"
         />
     </LinearLayout>
 
@@ -37,5 +24,23 @@
             android:layout_alignParentBottom="true"
             android:visibility="gone"
             />
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/main_LinearLayoutForSearch"
+        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_above="@+id/main_GridView"
+        android:visibility="gone"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        >
+        <EditText
+                android:id="@+id/main_SearchText"
+                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:hint="Entry the name or phone"
+        />
+    </LinearLayout>
+
+
+</RelativeLayout>
 
